tests/rt/pos/ifc/blockendorseto01.trp
let val untrustedValue = 42 raisedTo `<;alice>`
    val _ = if untrustedValue > 0 then print "tainted" else ()
    val _ = blockendorseto (authority, `<;#root-integrity>`) 
in cert ()
end